k8s/resources/organization-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization-v2
spec:
  selector:
    matchLabels:
      app: organization
      version: v2
      type: backend
  template:
    metadata:
      labels:
        app: organization
        version: v2
        type: backend
    spec:
      containers:
      - name: organization
        image: containersoga/organization
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits: 
            memory: 300Mi
            cpu: "1500m"
        readinessProbe: 
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 10
