k8s/resources/department.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: department
spec:
  selector:
    matchLabels:
      app: department
      type: backend
  template:
    metadata:
      labels:
        app: department
        type: backend
    spec:
      containers:
      - name: department
        image: containersoga/department
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: department
spec:
  selector:
    app: department
  ports:
  - port: 8083
    targetPort: 8080
    protocol: TCP
    name: http
