k8s/resources/employee.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee
spec:
  selector:
    matchLabels:
      app: employee
      type: backend
  template:
    metadata:
      labels:
        app: employee
        type: backend
    spec:
      containers:
      - name: employee
        image: containersoga/employee
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: employee
spec:
  selector:
    app: employee
  ports:
  - port: 8082
    targetPort: 8080
    protocol: TCP
    name: http
