k8s/resources/organization.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization
spec:
  selector:
    matchLabels:
      app: organization
      type: backend
  template:
    metadata:
      labels:
        app: organization
        type: backend
    spec:
      containers:
      - name: organization
        image: containersoga/organization
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: organization
spec:
  selector:
    app: organization
  ports:
  - port: 8081
    targetPort: 8080
    protocol: TCP
    name: http
