k8s/resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  labels:
    name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: /employee/?(.*)
          backend:
            service:
              name: employee
              port: 
                number: 8082
        - pathType: Prefix
          path: /department/?(.*)
          backend:
            service:
              name: department
              port: 
                number: 8083
        - pathType: Prefix
          path: /organization/?(.*)
          backend:
            service:
              name: organization
              port: 
                number: 8081
